--- a/resources/views/coba.html
+++ b/resources/views/coba.html
@@ -1,208 +1,79 @@
-@extends('customer.layout.layout') @section('navbar') @parent @endsection
-<link rel="stylesheet" href="assets/css/card.css" />
-@section('content') {{-- Header --}}
-<header
-    class="text-center text-white d-flex masthead"
-    style="background-image: url('img/bgpria.jpg')"
->
-    <div class="container my-auto">
-        <div class="row">
-            <div class="col-lg-10 mx-auto">
-                <h1 class="text-uppercase"><strong>Kategori Pria</strong></h1>
-                <hr />
-            </div>
-        </div>
-        <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5" style="font-size: 20px">
-                It's Nice To Meet You
-            </p>
-            <a class="btn btn-primary btn-xl" role="button" href="#pilPria"
-                >Find Out More</a
-            >
-        </div>
-    </div>
-</header>
-
-{{-- Item --}}
-<section id="pilPria">
-    <h2 class="text-center pb-4">Pilihan Pria</h2>
-    <div class="container">
-        <div class="row">
-            {{-- 1 --}}
-            <div
-                class="col-lg-4 col-md-12"
-                style="display: flex; justify-content: center"
-            >
-                <div class="containerCard">
-                    <div class="products">
-                        <div class="product">
-                            <div class="image">
-                                <img
-                                    src="https://www.panasonic.com/content/dam/pim/id/id/RZ/RZ-S50/RZ-S500WE/ast-1145400.png.pub.png?resize=272%3A204"
-                                    alt=""
-                                />
-                            </div>
-                            <div class="namePrice">
-                                <h3>earphone</h3>
-                                <span>$ 15.99</span>
-                            </div>
-                            <p>
-                                Lorem, ipsum dolor sit amet consectetur
-                                adipisicing elit. Accusamus, iusto.
-                            </p>
-                            <div class="stars">
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </div>
-                            <div class="bay">
-                                <button>bay now</button>
-                            </div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="views/detail.css" />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css2?familiy=Poppins:wght@300;400;500;600;700$display=swap"
+        />
+        <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="small-container single-product">
+            <div class="row">
+                <div class="col-2">
+                    <img
+                        src="https://t.ly/ka49s"
+                        alt=""
+                        width="100%"
+                        id="ProductImg"
+                    />
+                    <div class="small-img-row">
+                        <div class="small-img-col">
+                            <img
+                                src="https://t.ly/ka49s"
+                                alt=""
+                                width="100%"
+                                class="small-img"
+                            />
+                        </div>
+                        <div class="small-img-col">
+                            <img
+                                src="https://t.ly/ka49s"
+                                alt=""
+                                width="100%"
+                                class="small-img"
+                            />
+                        </div>
+                        <div class="small-img-col">
+                            <img
+                                src="https://t.ly/ka49s"
+                                alt=""
+                                width="100%"
+                                class="small-img"
+                            />
                         </div>
                     </div>
                 </div>
-            </div>
-
-            {{-- 2 --}}
-            <div
-                class="col-lg-4 col-md-12"
-                style="display: flex; justify-content: center"
-            >
-                <div class="containerCard">
-                    <div class="products">
-                        <div class="product">
-                            <div class="image">
-                                <img
-                                    src="https://www.panasonic.com/content/dam/pim/id/id/RZ/RZ-S50/RZ-S500WE/ast-1145400.png.pub.png?resize=272%3A204"
-                                    alt=""
-                                />
-                            </div>
-                            <div class="namePrice">
-                                <h3>earphone</h3>
-                                <span>$ 15.99</span>
-                            </div>
-                            <p>
-                                Lorem, ipsum dolor sit amet consectetur
-                                adipisicing elit. Accusamus, iusto.
-                            </p>
-                            <div class="stars">
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </div>
-                            <div class="bay">
-                                <button>bay now</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            {{-- 3 --}}
-            <div
-                class="col-lg-4 col-md-12"
-                style="display: flex; justify-content: center"
-            >
-                <div class="containerCard">
-                    <div class="products">
-                        <div class="product">
-                            <div class="image">
-                                <img src="img/pria/1.png" alt="" />
-                            </div>
-                            <div class="namePrice">
-                                <h3>earphone</h3>
-                                <span>$ 15.99</span>
-                            </div>
-                            <p>
-                                Lorem, ipsum dolor sit amet consectetur
-                                adipisicing elit. Accusamus, iusto.
-                            </p>
-                            <div class="stars">
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </div>
-                            <div class="bay">
-                                <button>bay now</button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-2">
+                    <p>Home / T-Shirts</p>
+                    <h1>T-Shirts by Enjoy</h1>
+                    <h4>$29.99</h4>
+                    <select>
+                        <option>Select Size</option>
+                        <option>XXL</option>
+                        <option>XL</option>
+                        <option>L</option>
+                        <option>M</option>
+                    </select>
+                    <input type="number" value="1" name="" id="" />
+                    <a href="" class="btn">Add to Cart</a>
+                    <h3>Product Details <i class="fa fa-indent"></i></h3>
+                    <br />
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Hic earum nemo quo quisquam quod officia ipsa
+                        pariatur labore perspiciatis tenetur.
+                    </p>
                 </div>
             </div>
         </div>
-
-        <div class="row pt-4 mt-3">
-            <div
-                class="col-md-4"
-                style="display: flex; justify-content: center"
-            >
-                <div class="card" style="width: 18rem">
-                    <a href="img/pria/4.png"
-                        ><img
-                            src="img/pria/4.png"
-                            class="card-img-top"
-                            alt="..."
-                    /></a>
-                    <div class="card-body">
-                        <p class="card-text">
-                            Some quick example text to build on the card title
-                            and make up the bulk of the card's content.
-                        </p>
-                        <a href="admin/produk"
-                            ><button class="btn btn-primary">
-                                Lihat Detail
-                            </button></a
-                        >
-                    </div>
-                </div>
-            </div>
-            <div
-                class="col-md-4"
-                style="display: flex; justify-content: center"
-            >
-                <div class="card" style="width: 18rem">
-                    <a href="img/pria/5.png"
-                        ><img
-                            src="img/pria/5.png"
-                            class="card-img-top"
-                            alt="..."
-                    /></a>
-                    <div class="card-body">
-                        <p class="card-text">
-                            Some quick example text to build on the card title
-                            and make up the bulk of the card's content.
-                        </p>
-                        <button class="btn btn-primary">Lihat Detail</button>
-                    </div>
-                </div>
-            </div>
-            <div
-                class="col-md-4"
-                style="display: flex; justify-content: center"
-            >
-                <div class="card" style="width: 18rem">
-                    <a href="img/pria/3.png"
-                        ><img
-                            src="img/pria/3.png"
-                            class="card-img-top"
-                            alt="..."
-                    /></a>
-                    <div class="card-body">
-                        <p class="card-text">
-                            Some quick example text to build on the card title
-                            and make up the bulk of the card's content.
-                        </p>
-                        <button class="btn btn-primary">Lihat Detail</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-@endsection
+    </body>
+</html>
